nemo-file-operations.c: Fix null pointer error.

ref:
https://gitlab.gnome.org/GNOME/nautilus/-/issues/2376